--- a/.github/workflows/wakaAction.yml
+++ b/.github/workflows/wakaAction.yml
@@ -1,10 +1,9 @@
-name: Yeonju Waka
+name: Waka Yeonju
 
 on:
   schedule:
-    # Runs at 12am IST
+    # Runs at 12am KST
     - cron: '00 15 * * *'
-    # cron: '00 15 * * *'로 하면 한국 시간 기준으로 오전 12:00에 업데이트 된다
   workflow_dispatch:
 jobs:
   update-readme:
@@ -15,3 +14,14 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_OS: "False"
+          SHOW_PROJECTS: "False"
+          SHOW_EDITORS: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False"
+          SHOW_LINES_OF_CODE: "False"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_TOTAL_CODE_TIME: "False"
+          SHOW_UPDATED_DATE: "False"
+          COMMIT_MESSAGE: "Updated with Waka Readme"
